Added toostring to games.java

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@ dist/web-files/
 Tournament\.dat
 
 Tournament\.txt
+
+build/built-jar\.properties
+
+dist/Progeksamen\.html
+
+dist/Progeksamen\.jar
+
+dist/Progeksamen\.jnlp
